fixing z-index

--- a/0x02-CSS_advanced/styles/31-style.css
+++ b/0x02-CSS_advanced/styles/31-style.css
@@ -211,7 +211,7 @@ a:active {
     left: -1rem;
     color: #efeded;
     font-size: 10rem;
-    z-index: 1;
+    z-index: -1;
 }
 
 .section-tagline {
